--- a/src/Components/CustomCheckbox/CustomCheckboxWithLabel.scss
+++ b/src/Components/CustomCheckbox/CustomCheckboxWithLabel.scss
@@ -3,8 +3,6 @@
   align-items: center;
   cursor: pointer;
   &__box {
-    width: 1rem;
-    height: 1rem;
     margin-right: 8px;
     &__active {
       background-color: #7367f0;
@@ -12,6 +10,15 @@
     &__default {
       background-color: rgb(224, 224, 224);
     }
+  }
+
+  &__default {
+    width: 1rem;
+    height: 1rem;
+  }
+  &__small {
+    width: 8px;
+    height: 8px;
   }
 
   &__text {
