New Password module

--- a/src/Containers/LoginPassword/LoginPassword.scss
+++ b/src/Containers/LoginPassword/LoginPassword.scss
@@ -5,5 +5,12 @@
   &__title {
     color: #757575;
   }
+  &__link-text {
+    color: #7367f0;
+    cursor: pointer;
+    &:hover {
+      color: #6a5ef3;
+    }
+  }
 
 }
